--- a/src/app/modules/home/search-board/search-board.component.html
+++ b/src/app/modules/home/search-board/search-board.component.html
@@ -1,5 +1,5 @@
 <app-filter-container></app-filter-container>
-<div class="row height">
+<div class="row">
     <div class="col-5">
         <div class="col-12 slide justify-content-center">
             <div  class="container container-row custom-slider-main" #widgetsContent>
