--- a/src/app/shared/component/filter/pop-up-filters/pop-up-filters.component.html
+++ b/src/app/shared/component/filter/pop-up-filters/pop-up-filters.component.html
@@ -95,8 +95,8 @@
 
 </div>
 
-  <div class="row submit-button justify-content-center">
-    <button mat-raised-button class="search" (click)="searchFunction()" ngbAutofocus>
+  <div class="row justify-content-center">
+    <button mat-raised-button class="button submit-button" (click)="searchFunction()" ngbAutofocus>
       <div class="material-icons">
         search
       </div>
