--- a/src/app/shared/component/filter/filter-container/filter-container.component.scss
+++ b/src/app/shared/component/filter/filter-container/filter-container.component.scss
@@ -20,16 +20,16 @@
 
 .black-background {
     margin-top: 100px;
-    background: black;
+    background: #8b8b8b;
     padding-top: 7px;
     padding-bottom: 7px;
-    border-radius: 25px !important;
+    border-radius: 5px 5px 5px 5px;
 }
 
 .background-color {
-    background-color: white;
+    background-color: #c7c7c7;
     margin-bottom: 70px;
-    border-radius: 25px !important;
+    border-radius: 5px 5px 5px 5px;
 }
 
 .center-filter {
