--- a/src/app/shared/component/filter/filter-search-on-view/filter-search-on-view.component.html
+++ b/src/app/shared/component/filter/filter-search-on-view/filter-search-on-view.component.html
@@ -28,22 +28,18 @@
         </mat-select>
       </mat-form-field>
       <div class="col-3 search-buttons">
-        <div class="more-button">
-          <button mat-raised-button class="search" (click)="openMoreSearchOptions()">
+          <button mat-raised-button class="button primary-button" (click)="openMoreSearchOptions()">
             <div class="material-icons">
               fact_check
             </div>
             More
           </button>
-        </div>
-        <div class="submit-button">
-          <button mat-raised-button class="search" (click)="searchFunction()">
+          <button mat-raised-button class="button submit-button" (click)="searchFunction()">
             <div class="material-icons">
               search
             </div>
             Search
           </button>
-        </div>
       </div>
 </div>
 </form>
