--- a/src/app/shared/component/filter/filter-search/filter-search.component.html
+++ b/src/app/shared/component/filter/filter-search/filter-search.component.html
@@ -1,6 +1,6 @@
-<div class="full-width border-margins row-space-around colored-background">
-  <div class="border-margins width-75">
-    <mat-form-field class="full-width" appearance="outline">
+<div class="row full-width border-margins row-space-around">
+  <div class="col-sm-8">
+    <mat-form-field class="form-field" appearance="outline">
       <input matInput placeholder="Location" #search type="search" (keyup.enter)="onKeyupEnter(search.value)"
         [formControl]="control" [matAutocomplete]="auto">
     </mat-form-field>
@@ -13,14 +13,12 @@
     </mat-autocomplete>
 
   </div>
-  <div class="border-margins width-25">
-    <div class="submit-button">
-      <button mat-raised-button class="search" (click)="searchFunction()">
+  <div class="col-sm-4">
+      <button mat-raised-button class="search button submit-button" (click)="searchFunction()">
         <div class="material-icons">
           search
         </div>
         Search
       </button>
-    </div>
   </div>
 </div>
