--- a/src/app/shared/component/filter/filter-search/filter-search.component.scss
+++ b/src/app/shared/component/filter/filter-search/filter-search.component.scss
@@ -1,15 +1,10 @@
 .search {
-    border-radius: 25px;
-    height: 40px;
-    font-size: larger;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    // background-color: rgb(110, 52, 226);
-    background-color: purple;
-    color: white;
+    width: 100%;
+    margin-bottom: 0px !important;
   }
 
   .border-margins {
-    padding-left: 5px;
+    padding-left: 20px;
     padding-right: 5px;
   }
 
@@ -29,10 +24,10 @@
 ::ng-deep .mat-form-field-wrapper {
     padding: unset;
 }
-           // mat-form-field-appearance-outline .mat-form-field-outline-end
+
 ::ng-deep .mat-form-field-appearance-outline .mat-form-field-outline {
     background-color: white;
-    border-radius: 25px !important;
+    border-radius: 5px 5px 5px 5px;
   }
 
 // Material Override PLACE TO STYLES
