--- a/src/app/shared/component/property-frame/property-frame.component.scss
+++ b/src/app/shared/component/property-frame/property-frame.component.scss
@@ -1,13 +1,17 @@
 .card {
     width: 100%;
     height: 250px;
-    border-bottom: 5px solid blue;
+    border: 1px solid #0000002e;
+    border-bottom: none;
+
 }
 
 .card-container {
     display: flex;
     flex-direction: column;
     height: 100%;
+    border-bottom: 5px solid red;
+    border-image: linear-gradient(to right, #1c4cc5, #ff4081) 1 stretch;
 }
 
 .loading {
