--- a/src/app/shared/property-details/property-details.component.scss
+++ b/src/app/shared/property-details/property-details.component.scss
@@ -1,6 +1,11 @@
 
 @import "~src/sass/_vars";
 
+.container {
+    margin: 0px !important;
+    border-right: 5px solid red;
+    border-image: linear-gradient(to top, #1c4cc5, #ff4081) 1 stretch;
+}
 html {
     scroll-behavior: smooth;
 }
@@ -58,15 +63,6 @@ html {
 
 }
 
-.characteristics{
-    margin-left: 10px;
-    .badge-light{
-        border: 1px solid white;
-        background-color: #09f;
-        color: white;
-        padding: 7px;
-    }
-}
 
 .contact{
     margin-left: 10px;
@@ -111,9 +107,6 @@ mat-divider {
 
 .price-value{
     padding-left: 10px;
-    border-top: 5px solid #09f;
-    border-left: 5px solid #09f;
-    // color: #09f;
     color: black;
     font-weight: bold;
     font-size: 35px;
@@ -135,29 +128,6 @@ mat-divider {
     }
 }
 
-.main-characteristics{
-    p{
-        margin-bottom: 0px;
-        margin-left: 2px;
-    }
- 
-}
-
-.submit-contact{
-    //font-weight: 700;
-    font-size: 16px;
-    //line-height: 24px;
-    height: auto;
-    background-color: rgb(0, 106, 255);
-    //border-color: rgb(0, 106, 255);
-    color: rgb(255, 255, 255);
-    margin-left: 3%;
-    margin-top: 3%;
-    width: 77%;
-    //border: 1px solid;
-    border-radius: 25px;
-    cursor: pointer;
-}
 
 .location{
     margin-bottom: 20px;
@@ -173,17 +143,7 @@ mat-divider {
     color:red;
 }
 
-.main-characteristics{
-    margin-left: 10px;
-    span{
-        margin-left: 5px;
-        margin-right: 5px;
-    }
-    .main-characteristics-title{
-        font-weight: bold;
-    }
 
-}
 
 ::ng-deep{
     .map-location{
@@ -207,21 +167,11 @@ mat-divider {
     border: none;
 }
 
-.container{
-::ng-deep .mat-form-field-appearance-outline .mat-form-field-outline-end {
-    border-radius: 0 20px 20px 0 !important;
-    flex-grow: 1 !important;
-  }
-  ::ng-deep .mat-form-field-appearance-outline .mat-form-field-outline-start {
-    border-radius: 20px 0 0 20px !important;
-    flex-grow: 1 !important;
-  }
-  ::ng-deep .mat-form-field-appearance-outline .mat-form-field-outline {
-    background-color: rgb(241, 241, 241);
-    border-radius: 20px 20px 20px 20px !important;
-  }
+.property-image{
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
 }
-
 
   @media (min-width: $dimension-breakpoint-xxs-min) {
     .property-images{
